[tool.poetry]
name = "packup"
version = "1.0.0"
description = "A self-hosted error and log collector"
authors = ["Buscedv <edvard1807@gmail.com>"]
license = "GNU GPL v3.0"

[tool.poetry.dependencies]
python = "^3.8"
ask-lang = "^1.4.4"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
